--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.3",
+    "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
